--- a/src/app/posts/1.md
+++ b/src/app/posts/1.md
@@ -7,6 +7,8 @@ author: 'Fernando Rosas'
 section: 'Temas Centrais'
 ---
 
+![image](/images/22_PM.jpg)
+
 É muito importante que, no cinquentenário da revolução que permitiu aos
 trabalhadores conquistarem a democracia política, a liberdade sindical e
 o direito à greve, se tenha presente que esse combate, tal como os de
@@ -163,6 +165,8 @@ movimento sindical em particular, com a dessindicalização crescente, a
 anomia social e a impotência para responder às novas formas de
 exploração e de pulverização social introduzidas pelo capitalismo
 neoliberal.
+
+![image](/images/16_PM.jpg)
 
 No imediato pós-abrilismo, o PCP, beneficiando das posições que detinha
 no movimento sindical, ocupa o aparelho sindical corporativo e, ao
