--- a/src/app/posts/10.md
+++ b/src/app/posts/10.md
@@ -8,6 +8,8 @@ author: 'José Soeiro'
 section: 'Temas Centrais'
 ---
 
+![image](/images/chaibi_1.jpeg)
+
 Nota introdutória, por José Soeiro[^1]
 
 *Leïla Chaibi é deputada ao Parlamento Europeu pela França Insubmissa.
@@ -405,6 +407,9 @@ de trabalho. Será que nos ajuda a reduzir a semana de trabalho, a ter
 uma semana de 4 dias? Ou será que, na realidade, significa ainda mais
 submissão, ainda mais subordinação. É essa a questão que estamos a
 enfrentar, penso eu.
+
+![image](/images/chaibi_2.jpeg)
+
 
 [^1]: Entrevista realizada em setembro de 2024 e traduzida para o
     português por José Soeiro
