--- a/src/app/posts/12.md
+++ b/src/app/posts/12.md
@@ -1,8 +1,26 @@
 ---
 title: 'Em que medida poderá o Tribunal sindicar os motivos que uma empresa
 invoque para fundamentar o despedimento?'
-subtitle: ''
+subtitle: 'A propósito da sindicabilidade judicial da motivação do despedimento coletivo na jurisprudência recente'
 date: '2025-01-31'
 author: 'Catarina Gomes Santos'
 section: 'Comentários Jurídicos'
 ---
+
+A importância prática do tema do despedimento coletivo dispensa explicações elaboradas.  Para além do impacto na economia do país, pela redução do nível de emprego que, em maior ou menor grau, sempre acarreta, o efeito que produz em cada um dos trabalhadores afetados, e nas respetivas famílias, é avassalador. Por muito que se procure “desdramatizar” o despedimento, realçando-se que os trabalhadores no mundo de hoje deverão estar preparados e disponíveis para os desafios de uma “transição entre empregos”, e que o modelo do *job for life* é um anacronismo, o certo é que quem recebe a notícia de que o estabelecimento onde trabalha encerrará portas ou de que a sua secção será extinta e que, em consequência, será abrangido por um processo de despedimento coletivo, não deixará de encarar com – maior ou menor – ansiedade e angústia o que o futuro lhe reserva. Conseguirá encontrar um novo emprego com brevidade? E, até lá, como fará frente aos gastos diários e aos compromissos financeiros assumidos?  A violência do despedimento, seja ele individual ou coletivo, é óbvia. Mas, embora tratando-se de facto notório, julgo que não será de mais relembrá-lo e tê-lo sempre presente, como pano de fundo, quando falamos de decisões empresariais, de “reestruturação”, de “redimensionamento”, de “redução de ativos” … A frieza do vocabulário da gestão empresarial e contabilística parece, por vezes, secundarizar a dimensão humana presente em todas as decisões de eliminação de emprego.  Não se esqueça: falamos, antes de mais, de decisões que impactam a vida de pessoas. 
+
+O tema que pretendo abordar nas próximas linhas prende-se com uma questão específica no âmbito do regime jurídico do despedimento coletivo: em que medida poderá o Tribunal sindicar os motivos que uma empresa invoque para fundamentar o despedimento? Poderá o Tribunal considerar injustificado o despedimento em face dos motivos alegados pela empresa? Competirá ao Tribunal aferir se o despedimento coletivo é uma medida racional e proporcionada em face dos fins que a empresa pretende com ele alcançar? Trata-se de um problema que, não sendo novo e contando, aliás, com uma ampla discussão doutrinária em seu redor, em Portugal e noutros ordenamentos, merece agora uma atenção redobrada entre nós devido à recente jurisprudência do Supremo Tribunal de Justiça, que denota uma certa inflexão no rumo da orientação tradicional, com o reforço dos poderes de controlo judicial do despedimento coletivo. 
+
+Para contextualização do tema, seguem-se algumas notas sumárias. Está entre nós, desde há muito, suprimida a exigência de autorização administrativa prévia para que uma empresa possa levar a cabo uma decisão de despedimento coletivo. O controlo dessa decisão é feito pelos tribunais*, a posteriori*, depois de consumado o despedimento, e na sequência de ação judicial intentada pelo trabalhador.  No processo judicial em que se impugna o despedimento coletivo, ao Tribunal competirá aferir da verificação de algum dos fundamentos de ilicitude que a lei expressamente prevê, em especial, para o despedimento coletivo (vícios graves do procedimento; falta de pagamento da compensação e dos demais créditos devidos ao trabalhador) e, em geral, para qualquer despedimento, independentemente da sua modalidade (improcedência do motivo; inexistência de procedimento; despedimento discriminatório…). 
+
+Numa primeira fase, a jurisprudência levava a cabo um controlo mínimo do despedimento coletivo, praticamente centrado na verificação do cabimento legal e da veracidade da motivação justificativa alegada pela empresa, na existência de vícios formais do procedimento e na falta de pagamento da compensação ao trabalhador. Partia-se da premissa de que a decisão de despedimento era uma simples decorrência de uma decisão gestionária prévia, quanto ao redimensionamento da empresa, a qual estava, pela sua própria natureza, reservada à liberdade do empresário e, como tal, excluída do âmbito de apreciação judicial. Deste modo, os tribunais adotavam uma atitude de grande prudência, evitando imiscuir-se nos critérios de gestão empresarial ou pronunciar-se sobre o mérito, conveniência ou oportunidade destas decisões. Assim, desde que: *i).* os motivos invocados para o despedimento se subsumissem no respetivo quadro legal de fundamentação (encerramento de secção ou estrutura equivalente ou redução do número de trabalhadores determinada por motivos de mercado, estruturais ou tecnológicos) e fossem verdadeiros (que não fantasiosos ou imaginários); *ii).* se demonstrasse uma efetiva eliminação de emprego (que não uma mera substituição de trabalhadores); *iii).* o procedimento, prévio à decisão de despedimento, tivesse sido observado (v.g. feitas as comunicações iniciais do procedimento e promovida a negociação com as estruturas representativas dos trabalhadores); e *iv).* a compensação (assim como os demais créditos laborais) tivesse sido tempestivamente paga… nada seria de apontar à licitude de um concreto despedimento coletivo. 
+
+Era este, igualmente, o entendimento que predominava – e ainda hoje predomina \- na doutrina nacional, qualificando-se o regime do despedimento coletivo como sendo um “regime liberal”, face à amplitude e flexibilidade dos respetivos requisitos, sobretudo quando comparado com a variante individual, ou seja, o despedimento por extinção do posto de trabalho. Neste, embora fundamentado na eliminação de emprego pelos mesmos motivos de mercado, estruturais ou tecnológicos, a lei impõe, designadamente, que a seleção dos trabalhadores se faça segundo uma ordem fixa de critérios e exige como  requisito de licitude uma ideia de *ultima ratio*: a impossibilidade prática da subsistência da relação laboral, associada na lei ao dever de oferta de posto de trabalho alternativo, se disponível na empresa. 
+
+Ora, a verdade é que a jurisprudência foi, paulatinamente, afinando o seu critério de controlo, e, talvez com o intuito de sopesar o carácter demasiado amplo e impreciso da lei, tem vindo a “apertar a malha” na avaliação da licitude do despedimento coletivo. Tem-se exigido, adicionalmente, *v).* a verificação de uma relação de congruência entre os motivos invocados e o despedimento, a aferir segundo um juízo de razoabilidade e adequação: é o despedimento (em si mesmo ou na sua dimensão) uma medida razoável e proporcionada para atingir as finalidades visadas pela empresa? Este critério mais exigente traduz, na prática, um julgamento acerca do próprio mérito ou acerto da decisão de eliminação de emprego, que passa a estar, assim, sujeita a um “teste de proporcionalidade”. 
+
+Paradigmático desta tendência é o Acórdão do STJ de 11/12/2019 (Relator António Leones Dantas), cujo sumário se transcreve parcialmente: “Operando a empregadora num concreto mercado através de várias lojas comerciais, a mera redução de custos inerentes ao funcionamento de uma concreta loja, potenciada pelo encerramento da mesma, motivada na redução do volume de vendas dessa loja em dois anos sucessivos, não pode ser entendido como motivo proporcionalmente adequado ao encerramento da mesma loja e ao despedimento coletivo dos respetivos trabalhadores, quando não se tenha demonstrado sequer a existência de prejuízos decorrentes do funcionamento dessa loja, na operação global no mercado onde a mesma se situa.” O dogma tradicional segundo o qual a empresa é livre para decidir redimensionar-se, encerrando secções ou estabelecimentos e, com isso, determinando o despedimento dos trabalhadores que aí prestam a sua atividade, é agora, irremediavelmente, posto em causa…
+
+Em jeito de conclusão, não podemos deixar de salientar – e aplaudir \- o papel “corretivo” que a jurisprudência nacional tem sabido exercer em face das imprecisões e do caráter dúbio de tantas normas legais. O Código do Trabalho nada diz expressamente sobre a intensidade do controlo judicial da motivação do despedimento coletivo, e, por isso, os Tribunais têm hesitado e, ainda assim, evoluído no desenho desse critério valorativo. Melhor seria que, seguindo-lhe a passada, o legislador clarificasse o regime do despedimento coletivo, evitando aquilo a que alguém já chamou de “lotaria judicial”. 
+
+[^1]:  Professora assistente convidada da Escola de Direito da UCP Porto; doutoranda em ciências jurídico-empresariais (menção em Direito Laboral) pela FDUC. 
