--- a/src/app/posts/13.md
+++ b/src/app/posts/13.md
@@ -7,6 +7,9 @@ author: 'João Zenha Martins'
 section: 'Comentários Jurídicos'
 ---
 
+![image](/images/zenha_martins.jpg)
+
+
 I.  **A questão**
 
 1- O Sindicato Nacional dos Profissionais da Indústria do Calçado, Malas
