--- a/src/app/posts/16.md
+++ b/src/app/posts/16.md
@@ -6,6 +6,9 @@ author: 'Nuno Teles'
 section: 'Abecedário Crítico'
 ---
 
+![image](/images/abc1.jpeg)
+
+
 A exploração é um conceito usado no senso comum de forma moral, para dar
 conta da indignação em relação a uma dada realidade laboral, entendida
 como injusta para o trabalhador. Duas fontes de indignação são
