--- a/src/app/posts/18.md
+++ b/src/app/posts/18.md
@@ -7,9 +7,9 @@ author: 'António Monteiro Fernandes'
 section: 'Internacional'
 ---
 
-[^1]
+![image](/images/alain_supiot.png)
 
-Nota prévia, por António Monteiro Fernandes
+### Nota prévia, por António Monteiro Fernandes
 
 *Esta Revista beneficia do privilégio de incluir, no seu número natal, o
 texto de uma longa entrevista de Alain Supiot, concedida a uma outra
@@ -86,6 +86,8 @@ encontrará nele inspiração para reflexões próprias acerca do destino
 dessa ideia de "justiça social", que todos encontramos impressa no nosso
 espírito, mas a que a sociedade a que pertencemos tem tanta relutância
 em dar concretização plena.*
+
+![image](/images/5_PM.jpeg)
 
 **Porque faltam tantas vezes as ferramentas para a resolução de
 conflitos?**
