--- a/src/app/posts/2.md
+++ b/src/app/posts/2.md
@@ -6,6 +6,8 @@ author: 'Manuel Carvalho da Silva'
 section: 'Temas Centrais'
 ---
 
+![image](/images/6_PM.jpg)
+
 **Da Luta Contra o Fascismo ao 25 de Abril de 1974**
 
 A agenda do Movimento Sindical Português foi incorporando, durante um
@@ -137,6 +139,8 @@ valorização e defesa da Constituição da República, para proteção dos
 seus interesses e para o confronto com os inimigos do regime
 democrático. Essa opção surgiu marcante no Congresso de Todos os
 Sindicatos (2º da Intersindical), em janeiro de 1977.
+
+![image](/images/12_PM.jpg)
 
 **Notas sobre avanços e recuos**
 
