--- a/src/app/posts/3.md
+++ b/src/app/posts/3.md
@@ -7,3 +7,40 @@ author:
 - 'Maria Manuel Rola'
 section: 'Temas Centrais'
 ---
+
+![image](/images/domestico.png)
+
+Das memórias do período revolucionário português, para muitos não sobressaem as milhares de mulheres que quiseram criar um sindicato para reconverter a sua profissão e emancipá-la dos moldes de exploração em que se processava até então — e, em parte, até aos dias de hoje. Muitas destas delas tinham migrado de terras do interior do país para cidades do litoral onde habitualmente as esperavam já nas casas onde servir. Sendo estas as casas em que habitavam, trabalhavam e descansavam, os horários laborais não tinham limites claramente estabelecidos e as folgas eram frequentemente desrespeitadas. Na prática, fruto de uma relação de subordinação material e afetiva, estas trabalhadoras viviam e atuavam conforme a disposição das patroas. Desenraizadas, com o tempo contado para sociabilização e em tempos ainda de ditadura, era difícil imaginar que poderiam sequer organizar-se em entidades sindicais.Mas, como escreveram num dos boletins informativos que vieram a criar, bem sabiam que para a sua “luta ir para a frente, não poderia ser obra de meia dúzia”. 
+Este ensaio visual compila algum do material usado na exposição “Mulheres todos os dias” que esteve patente na Galeria Geraldes (Porto) em 2022 e na Fábrica das Ideias (Ílhavo) em 2023. Aí, procurámos reconstituir a história de uma mobilização que, entre o período anterior ao 25 de abril e até 1991, traz para a linha da frente, segundo as suas dirigentes,  mais de 9000 trabalhadoras do serviço doméstico sindicalizadas e cria refeitórios, lavandarias, cantinas e serviços de limpeza da “classe trabalhadora para a classe trabalhadora”. Tal como aí, este é um breve resumo da história do Sindicato do Serviço Doméstico e sua cooperativa, que vamos comentando a partir da reprodução de documentos originais do arquivo da dirigente do sindicato Conceição Ramos e da formadora de dirigentes e cooperadora Godelieve Meersschaert. 
+
+### SOMOS UM GRUPO DE EMPREGADAS DOMÉSTICAS — as raízes ainda antes do 25 abril
+
+O que leva um sindicato? O processo de mobilização e politização iniciou-se através da Juventude Operária Católica, ainda nos finais da década de 1960. Com a formação da Comissão Pró-Sindicato mesmo antes do 25 de abril, desenvolvem-se reuniões entre empregadas domésticas que incluíam também outros trabalhadores de casas particulares, como jardineiros, mordomos e motoristas. 
+
+Na base da consciencialização das Empregadas Domésticas, está uma lei que as regia desde 1867, e que as distinguia de todos os outros trabalhadores. Até 1980 as Empregadas Domésticas não tinham garantia de descanso semanal, horários mínimos de trabalho, férias e subsídio de férias, segurança social e salário mínimo. Isto implicava que não tinham tempo próprio de lazer ou para a família, que se sujeitam aos humores das patroas e viviam em situações de clausura ou rapto por parte da entidade patronal. 
+
+A luta pela oficialização de um Sindicato que lutasse por “modificar as coisas” e que fosse representativo da classe é uma autêntica corrida entre esta organização e o sindicato promovido pela Obra de Santa Zita, o Sindicato Livre das Empregadas Domésticas — SLED — ou “sindicato das Zitas”, que foi reconhecido pelo Governo antes do Sindicato do Serviço Doméstico.
+
+### JÁ TENS UM SINDICATO. TU ÉS O SINDICATO. — organização, ação 
+
+Durante o período da sua existência, o Sindicato do Serviço Doméstico teve uma intensa atividade sindical, organizada em delegações regionais ou de bairro. O trabalho porta-a-porta para levantamento de quotas, entrevistas ou “sondagens à opinião pública”, iniciativas culturais passando por cursos de formação, festas e excursões (para o estrangeiro e dentro do país), fanzines e de peças de teatro que percorrem o quotidiano e reivindicações das Empregadas Domésticas.  “A luta pela cultura é, antes de mais, um acto de libertação”, escreviam no Boletim Informativo nº14, em março de 1978. O trabalho de alfabetização, de iniciativas culturais e de formação de quadros é uma das componentes com maior intensidade a par com o trabalho de correspondência com as associadas — nomeadamente para apoio e resposta a dúvidas sobre os direitos e condições de trabalho. Já alfabetizar seria mais do que aprender a ler e escrever a partir dos significados de todos os dias: povo, ordenado, fábrica, trabalho, vida. Criar grupos de discussão, escrever e encenar peças de teatro, realizar cursos de formação de quadros ou de preparação para o congresso fazia parte de um projeto mais amplo para transformar a sociedade. Derrubar as estruturas de opressão e exploração é também um acto de cultura.
+
+Com uma lei literalmente do século passado, e sem alterações visíveis até à década de 80, o Sindicato do Serviço Doméstico fez uma lei com as próprias mãos, que apresentou a vários Governos e decisores políticos. Redigiram ainda petições e construíram vários objetos de mobilização, como os inquéritos à condição de trabalho e como a matrafona (uma boneca fardada de serviçal, com a qual desfilaram nas ruas e finalmente entregaram a Maria de Lourdes Pintasilgo, então Primeira-Ministra), para alertar para o regime que as explorava. Conseguiram, finalmente, que em 1980 o Decreto-Lei n.º 508/80 fosse publicado. No entanto, muitas injustiças continuaram a figurar na lei, pelo que se mobilizaram para a sua alteração.
+
+### COOPERSERDO: uma cooperativa para reinventar a profissão
+
+Para além de ser uma das formas de financiamento para a atividade do sindicato, esta cooperativa surge da identificação da necessidade da reconversão da profissão das empregadas domésticas. Extraindo estes serviços para o espaço coletivo, a vontade era de desprivatizar o cuidado e direcionar estas respostas aos operários e operárias que deles realmente necessitam. A cooperativa criou creches, lavandarias e refeitórios populares, da classe trabalhadora para a classe trabalhadora. A Cooperativa teve espaços físicos em Lisboa, Porto e Évora. No Porto e em Lisboa, os primeiros edifícios foram ocupados a 25 de abril, na Rua de São Bento em Lisboa e na Avenida da Boavista no Porto. Nesta última cidade existiram três refeitórios, entre eles chegou a haver um em articulação com a junta de freguesia do Bonfim.
+
+O espaço da Rua de São Bento foi ocupado depois do 25 de abril e o arrendamento posteriormente regularizado com a Câmara Municipal de Lisboa, embora com condições precárias. No Porto, a sede ocupada e depois mantida com anuência do proprietário na Avenida da Boavista 1003 foi despejada em 1982 por este para construção de um centro comercial. Mudaram-se, sindicato e cooperativa, posteriormente para a rua do Bonjardim.
+
+Estes edifícios foram ainda palco de uma bonita história de cooperação internacional que, entre outras formas de apoio, contribuiu para tornar mais habitável o degradado edifício ocupado na rua de São Bento com a vinda de carpinteiras holandesas e outros companheiros que apoiaram esta luta. No Porto mobilizaram-se apoios internacionais para angariação de fundos para compra de um novo espaço aquando do despejo da Av da Boavista. 
+
+### DIZEMOS NÃO À SERVIDÃO — o congresso de 1979 
+
+Consta que no primeiro congresso nacional do Sindicato do Serviço Doméstico, em 1979, entre tantas outras, uma empregada doméstica tomou a palavra dizendo: “acabemos com o termo mulher-a-dias, lembra o passado. Sou mulher a cem por cento, mas sou trabalhadora doméstica”. Se ser empregada doméstica era uma profissão tão boa como qualquer outra, seria alguém capaz de criar uma filha para a pôr a servir? – perguntava-se. Eram trabalhadoras por inteiro, todos os dias. O manifesto seria dirigido ao Governo, mas também a si mesmas. 
+
+Esse congresso tomou lugar no Pavilhão dos Desportos em Lisboa, a 27 e 28 de outubro. Uma Comissão Organizadora do Congresso foi constituída por dirigentes como Conceição Ramos, Conceição Faria, Lieve Meersschaert, Vitória, Maria Emília e Helena Pereira. O processo de mobilização envolveu ações como as que vimos no friso anterior (os inquéritos que as ativistas fizeram nas ruas, nomeadamente a quem entrava nos mercados), festas de angariação de fundos como a Grande Festa da Vassoura e cursos de formação de quadros. A cada empregada presente no congresso foi distribuído um “pequeno livro” publicado pela Base-Fut e escrito por Olegário Paz, Empregadas Domésticas Mulheres em Luta: Para a história do serviço doméstico em Portugal — das origens ao fascismo, que se pode consultar no canto de leitura deste piso.
+
+Estas trabalhadoras ergueram com as próprias mãos o seu sindicato para reivindicar direitos iguais aos outros trabalhadores, os espaços de que necessitavam de apoio às crianças e a si próprias, de refeição e de lavandaria, as suas próprias sedes, que ocuparam e de onde foram, em algumas situações, despejadas. Mas também construíam todos os dias a mobilização, o financiamento, os materiais de reivindicação, as suas escalas, a comunicação entre si, de esclarecimento ou de reposição da lei aos patrões. Construíram laços de solidariedade internacional, construíram os materiais de divulgação, faixas e matrafonas, os cursos de dirigentes, as casas umas das outras e a sua própria lei. Tiveram vitórias e derrotas que levaram, por fim, a que se fundisse no Sindicato dos Trabalhadores de Serviços de Portaria, Vigilância, Limpeza, Domésticas e Actividades Diversas – STAD, após diversas dificuldades ao longo da segunda metade da década de 80.
+
+O Sindicato do Serviço Doméstico (SSD) foi uma organização singular no universo laboral em Portugal. Essa particularidade tem várias caras: por ter sido constituída em exclusivo por mulheres, num panorama em que mesmo nas profissões feminizadas eram os homens quem ocupava os cargos dirigentes nos sindicatos; pelo tipo de atividade, modos de organização e repertórios de luta que o SSD desenvolveu; e também pelo contexto moral e político que se vivia quando este movimento começou a ser germinado, mesmo antes da ditadura, rompendo com a moralidade do Estado Novo, com a lógica disciplinadora das “criadas de servir” em torno do temor, acato, recato e obediência. Pelo desenraizamento a que estavam sujeitas, vindas do universo social mais pobre dos meios rurais, e pela sua inserção no espaço privado onde o seu trabalho tomava e toma lugar; pelo não reconhecimento do trabalho doméstico enquanto um trabalho como outros; tudo isso que conseguiram romper, por tudo isso que ensaiaram e construíram — tudo são motivos para o nosso espanto, a vontade continuada de ouvir e contar esta história. 
