--- a/src/app/posts/4.md
+++ b/src/app/posts/4.md
@@ -6,6 +6,8 @@ author: 'Teresa Garcia'
 section: 'Temas Centrais'
 ---
 
+![image](/images/3_PM.jpg)
+
 Em pleno século XXI, a incerteza continua a estar presente em muitas
 áreas das nossas vidas, desde os problemas prementes de guerras, de
 instabilidades políticas, de excesso de população mundial, de recursos
@@ -252,47 +254,36 @@ remunerações justas é sem dúvida o aspeto mais importante na manutenção
 do equilíbrio financeiro do sistema previdencial.
 
 [^1]: Decreto-Lei n.º 329/93, de 25 de setembro.
-
 [^2]: Decretos-Leis n.º 246/2003, de 8 de outubro; n.º 291/2003, de 19
     de novembro; Decretos-Leis nºs 240-D/2004, 240-B/2004, 240-C/2004,
     240-A/2004, todos de 29 de dezembro, e 241-A/2004, de 30 de
     dezembro, com efeitos reportados a 1 de dezembro de 2004.
-
 [^3]: Decreto-Lei n.º 140-B/2010, de 30 de dezembro.
-
 [^4]: Decreto-Lei n.º 127/2011, de 31 de dezembro.
-
 [^5]: Decreto-Lei 14/2023, de 24 de fevereiro.
-
 [^6]: Casey, B. H. (2014). From pension funds to piggy banks: (Perverse)
     consequences of the Stability and Growth Pact since the crisis.
     *International Social Security Review*, 67, 27--48.
-
 [^7]: Note-se que o consumo de capital fixo representa a depreciação dos
     ativos fixos em resultado do desgaste normal dos mesmos e da sua
     obsolescência. Este valor inclui uma provisão para perdas de ativos
     fixos como consequência de prejuízos acidentais, suscetíveis de
     serem cobertos pelo seguro.
-
 [^8]: Garcia, M. T. M. (2024). Os fundamentos da emergência dos sistemas
     públicos de pensões, in *Segurança Social: Direito e Economia:
     Edição comemorativa dos 50 anos da Constituição da República
     Portuguesa de 1976*. Garcia, M. T. M., Campino, J., Bravo, J. M.,
     Martins, L. L., Lavouras, M., Correia, J. A., Dias, P. L., Luís, S.
     L., Serrão, T., & Amaro, N. M. (Coord.), Almedina.
-
 [^9]: Em Portugal, o Fundo de Estabilização Financeira da Segurança
     Social foi criado em 1989.
-
 [^10]: Beattie, R. and W. McGillivray (1995). A risky strategy:
     Reflections on the World Bank Report: averting the old age crisis.
     *International Social Security Review*, Vol. 48, No. 3-4, pp. 5-22;
-
     International Labour Office (2018). Reversing Pension
     Privatizations: Rebuilding public pension systems in Eastern Europe
     and Latin America, Edited by Isabel Ortiz, Fabio Durán-Valverde,
     Stefan Urban and Veronika Wodsa. Geneva: ILO, 2018.
-
 [^11]: O relatório da Comissão Europeia de 2006 (Adequate and
     sustainable pensions: syntheseis report, Office for Official
     Publications of the European Communities), descreve a tendência das
@@ -302,7 +293,6 @@ do equilíbrio financeiro do sistema previdencial.
     prestações sociais, em termos individuais; 3. Consideração da
     esperança média de vida na fórmula de cálculo das pensões e no seu
     acesso..
-
 [^12]: Murteira, M. C. (2020). A Erosão Drástica da Segurança de
     Rendimento na Reforma em Portugal: O Efeito Cumulativo dos
     Ajustamentos Incrementais, *Notas Económicas* 50, pp. 43- 63;
@@ -311,18 +301,14 @@ do equilíbrio financeiro do sistema previdencial.
     Fundamentado na Relação Laboral in *Regime de Mínimos Sociais em
     Portugal - Evolução do Discurso Político e das Políticas*, José
     António Pereirinha, Elvira Pereira (Coord.), Almedina.
-
 [^13]: Em 2024 atingiu o valor mais baixo de 84,2%.
-
 [^14]: European Commission, 2021. The 2021 Ageing Report: economic and
     budgetary projections for the EU Member States (2019-2070).
     Institutional paper, No. 148.
-
 [^15]: Já no que diz respeito aos subscritores da Caixa Geral de
     Aposentações, este valor tem sido errático, mas praticamente sempre
     superior a 30 anos, o que tem explicação no limite de idade que se
     registava para entrar na Função Pública.
-
 [^16]: Não são os países mais populosos que têm sistemas de segurança
     social, mas sim os países onde existe o reconhecimento dos direitos:
     Declaração Universal dos Direitos do Homem (artigos 22.º 23º, 10 de
