--- a/src/app/posts/5.md
+++ b/src/app/posts/5.md
@@ -7,6 +7,7 @@ author: 'Isabel Roque'
 section: 'Temas Centrais'
 ---
 
+
 O século XXI caracteriza-se por um contexto de policrise em que o
 capitalismo enfrenta mais uma das suas metamorfoses manifesta em tensões
 disruptivas, simultaneamente a nível económico (inflação e recessão),
@@ -27,6 +28,9 @@ eufemismo do empreendedorismo, identitarismo e individualização. O
 indivíduo é colocado à total mercê do capital, desvalorizando práticas
 coletivistas e os ideais de solidariedade que sustentavam sindicatos e
 partidos trabalhistas.
+
+![image](/images/1_PM.jpg)
+
 
 **Crise de 2008, austeridade e novos protestos**
 
