--- a/src/app/posts/6.md
+++ b/src/app/posts/6.md
@@ -7,6 +7,8 @@ author: 'Vicente Ferreira'
 section: 'Temas Centrais'
 ---
 
+![image](/images/1_AM.jpg)
+
 O regresso da inflação a níveis que já não se registavam há várias
 décadas traduziu-se numa crise do custo de vida. Isso aconteceu enquanto
 as grandes empresas viam os seus lucros disparar à boleia da subida dos
@@ -36,9 +38,7 @@ igualmente expressiva, regressando ao valor inicial. Uma análise mais
 detalhada de cada uma destas fases ajuda a perceber a economia política
 da distribuição do rendimento em Portugal.
 
-![Uma imagem com texto, diagrama, captura de ecrã, Gráfico Descrição
-gerada automaticamente](media/image1.png){width="4.063194444444444in"
-height="3.5589490376202977in"}
+![image](/images2/2_AM.jpg)
 
 **2008 -- 2014: crise e austeridade**
 
@@ -80,6 +80,8 @@ compressão dos salários e de redução da parte do rendimento produzido na
 economia que é recebida pelos trabalhadores. O desemprego -- que atingiu
 os 17,1% em 2013 -- também desempenha um papel importante enquanto
 mecanismo disciplinador da força de trabalho.[^5]
+
+![image](/images2/3_AM.jpg)
 
 **2015 -- 2019: Geringonça**
 
@@ -124,6 +126,8 @@ investimento estrangeiro, acentuou a especialização da economia
 portuguesa em serviços de baixo valor acrescentado e pouco potencial
 produtivo, contribuindo também para a subida vertiginosa dos preços da
 habitação.[^6]
+
+![image](/images2/4_AM.jpg)
 
 **2020 -- 2024: pandemia e inflação**
 
