--- a/src/app/posts/7.md
+++ b/src/app/posts/7.md
@@ -8,12 +8,13 @@ author: 'Maria da Paz Campos Lima'
 section: 'Temas Centrais'
 ---
 
-**Manuel Freitas ,** Coordenador da Federação dos Sindicatos dos
-Trabalhadores Têxteis, Lanifícios, Vestuário, Calçado e Peles de
-Portugal (FESETE, CGTP)
 
-***1. Qual foi o impacto das políticas do período da intervenção da
-troika na desvalorização salarial dos sectores?***
+### Manuel Freitas, Coordenador da Federação dos Sindicatos dos Trabalhadores Têxteis, Lanifícios Vestuário, Calçado e Peles de Portugal (FESETE, CGTP)
+
+![image](/images/19_PM.jpg)
+
+
+***1. Qual foi o impacto das políticas do período da intervenção da troika na desvalorização salarial dos sectores?***
 
 Antes de avaliar o impacto, considero relevante introduzir alguns dados
 de caracterização das Indústrias Têxteis, Vestuário, Curtumes e Calçado
@@ -183,11 +184,12 @@ semanal até às 35 horas; estudar novos modelos de organização do
 trabalho, em substituição do trabalho monótono e repetitivo, com o
 objetivo de prevenir e reduzir as doenças profissionais e psicossociais.
 
-**Rui Miranda,** secretário-geral do Sindicato Nacional da Indústria e
-da Energia (SINDEL, UGT)
+### Rui Miranda, secretário-geral do Sindicato Nacional da Indústria e da Energia (SINDEL, UGT)
 
-**1. Qual foi o impacto das políticas do período de intervenção da
-troika na desvalorização salarial no sector?**
+![image](/images/5_AM.jpg)
+
+***1. Qual foi o impacto das políticas do período de intervenção da
+troika na desvalorização salarial no sector?***
 
 Gostaria de aproveitar, desde logo, para deixar claro que o SINDEL
 nasceu no seio da EDP, em 1979, sendo desde há muitos anos o maior
@@ -218,11 +220,11 @@ seria se o SINDEL não tivesse multiplicado a sua atenção, argúcia e
 aptidão negocial, levando a empresa a reconhecer, aqui e ali, a postura
 injusta que teimava adotar.
 
-**2. Em que medida, no período pós-troika até à atualidade, se assistiu
+***2. Em que medida, no período pós-troika até à atualidade, se assistiu
 a uma recuperação salarial no sector? Em que medida a pandemia e a vaga
 inflacionista comprometeram o alcance dessa recuperação? Qual foi o
 contributo das lutas sindicais e da negociação coletiva no setor para os
-resultados alcançados?**
+resultados alcançados?***
 
 Não há dúvida de que a "saída" (o espírito, em algumas empresas
 designadamente a EDP, ficou...) da troika de Portugal conduziu à
@@ -250,8 +252,7 @@ para além do receio que enfrentavam relativamente ao desconhecido e
 temível vírus, pretendiam continuar a servir a empresa, em segurança e a
 contento de todas as partes.
 
-**3. Como avalia o impacto do último Acordo de Rendimentos nos salários
-e na negociação coletiva?**
+***3. Como avalia o impacto do último Acordo de Rendimentos nos salários e na negociação coletiva?***
 
 O Acordo de Rendimentos tem sido uma pedra fulcral para a melhoria dos
 salários, até porque o facto de se conseguir uma valorização regular do
@@ -297,10 +298,10 @@ empresas -- sobretudo as que se posicionam em sectores
 socioeconómicos-chave -- devem ter no desenvolvimento das comunidades
 que serve e das pessoas que nela e para ela trabalham.
 
-**4. Quais os constrangimentos/obstáculos a superar na atualidade, na
+***4. Quais os constrangimentos/obstáculos a superar na atualidade, na
 perspetiva da valorização dos salários e das carreiras profissionais do
 sector, em sede de negociação coletiva? Quais as prioridades da vossa
-agenda em termos de luta sindical e de negociação coletiva?**
+agenda em termos de luta sindical e de negociação coletiva?***
 
 Permitam-me que insista, ainda, no Caso EDP -- que se tem singularizado
 pelas piores razões.
@@ -325,8 +326,10 @@ A Contratação Coletiva é o único instrumento de regulação das relações
 de trabalho que realmente defende os trabalhadores e assegura o seu
 direito à Justiça e à Dignidade.
 
-**Joana de Bordalo e Sá**, Presidente da Federação Nacional dos Médicos
-(FNAM)
+### Joana de Bordalo e Sá, Presidente da Federação Nacional dos Médicos (FNAM)
+
+![image](/images/6_AM.jpg)
+
 
 ***1. Qual foi o impacto das políticas do período de intervenção da
 troika na desvalorização salarial no sector?***
