--- a/src/app/posts/9.md
+++ b/src/app/posts/9.md
@@ -9,6 +9,8 @@ author:
 section: 'Temas Centrais'
 ---
 
+![image](/images/estafetas.jpeg)
+
 **1. A prestação de serviços via/para plataforma digitais**
 
 As profundas mudanças registadas, nos últimos anos, na forma de
