--- a/src/app/posts/11.md
+++ b/src/app/posts/11.md
@@ -7,6 +7,7 @@ date: '2025-01-31'
 author: 'Viriato Reis'
 section: 'Comentários Jurídicos'
 ---
+![image](/images/dr_1.jpeg)
 
 I - **Acórdão do Tribunal Constitucional n.º 380/2024, de 4 de junho**
 
