--- a/src/app/posts/14.md
+++ b/src/app/posts/14.md
@@ -11,6 +11,8 @@ author:
 section: 'Mesa de Controvérsia'
 ---
 
+![image](/images/13_PM.jpg)
+
 O Código do Trabalho de 2003 rompeu com o regime de negociação coletiva
 que vigorou em Portugal desde meados dos anos 70 do século passado, ao
 reverter o princípio do tratamento mais favorável e ao abrir a porta à
