--- a/src/app/posts/17.md
+++ b/src/app/posts/17.md
@@ -6,6 +6,8 @@ author: 'Milena Rouxinol'
 section: 'Abecedário Crítico'
 ---
 
+![image](/images/abc2.jpg)
+
 A expressão *outsourcing* -- *recurso a fonte externa* -- é de uso muito
 frequente, no contexto da gestão empresarial, mais especificamente a
 propósito das possíveis soluções para suprimento da necessidade de
