--- a/src/app/posts/28.md
+++ b/src/app/posts/28.md
@@ -6,6 +6,8 @@ author: 'Isabel Roque'
 section: 'Culturas do Trabalho'
 ---
 
+![image](/images/ct1.jpg)
+
 Novas formas de extração do trabalho humano destituído de direitos
 laborais e humanos compreendem um processo de transformação não apenas
 da natureza do trabalho, através da digitalização das sociedades e
