--- a/src/app/posts/10.md
+++ b/src/app/posts/10.md
@@ -5,7 +5,7 @@ subtitle: 'Entrevista com Leïla Chaibi, deputada ao Parlamento Europeu, sobre a
 diretiva europeia relativa ao trabalho em plataformas'
 date: '2025-01-31'
 author: 'José Soeiro'
-section: 'Temas Centrais'
+section: 'Plataformas Digitais'
 ---
 
 ![image](/images/chaibi_1.jpeg)
