--- a/src/app/posts/2.md
+++ b/src/app/posts/2.md
@@ -3,7 +3,7 @@ title: 'O Movimento Sindical na Construção da Democracia'
 subtitle: 'Da luta contra o fascismo aos dias de hoje'
 date: '2025-01-31'
 author: 'Manuel Carvalho da Silva'
-section: 'Temas Centrais'
+section: '50 anos do 25 de Abril'
 ---
 
 ![image](/images/6_PM.jpg)
