--- a/src/app/posts/3.md
+++ b/src/app/posts/3.md
@@ -5,7 +5,7 @@ date: '2025-01-31'
 author: 
 - 'Mafalda Araújo'
 - 'Maria Manuel Rola'
-section: 'Temas Centrais'
+section: '50 anos do 25 de Abril'
 ---
 
 ![image](/images/domestico.png)
