--- a/src/app/posts/4.md
+++ b/src/app/posts/4.md
@@ -3,7 +3,7 @@ title: 'A segurança social que nos une'
 subtitle: ''
 date: '2025-01-31'
 author: 'Teresa Garcia'
-section: 'Temas Centrais'
+section: '50 anos do 25 de Abril'
 ---
 
 ![image](/images/3_PM.jpg)
