--- a/src/app/posts/6.md
+++ b/src/app/posts/6.md
@@ -4,7 +4,7 @@ em Portugal?'
 subtitle: ''
 date: '2025-01-31'
 author: 'Vicente Ferreira'
-section: 'Temas Centrais'
+section: 'Salários ontem e hoje'
 ---
 
 ![image](/images/1_AM.jpg)
