--- a/src/app/posts/7.md
+++ b/src/app/posts/7.md
@@ -5,7 +5,7 @@ subtitle: 'Quatro perguntas a Manuel Freitas (FESETE, CGTP), Rui Miranda (SINDEL
 UGT) e Joana Bordalo e Sá (FNAM), por Maria da Paz Campos Lima'
 date: '2025-01-31'
 author: 'Maria da Paz Campos Lima'
-section: 'Temas Centrais'
+section: 'Salários ontem e hoje'
 ---
 
 
