--- a/src/app/posts/9.md
+++ b/src/app/posts/9.md
@@ -6,7 +6,7 @@ date: '2025-01-31'
 author: 
   - 'João Leal Amado'
   - 'Teresa Coelho Moreira'
-section: 'Temas Centrais'
+section: 'Plataformas Digitais'
 ---
 
 ![image](/images/estafetas.jpeg)
