--- a/src/app/posts/1.md
+++ b/src/app/posts/1.md
@@ -4,7 +4,7 @@ subtitle: '150 anos de movimento operário em Portugal e três problemas por
 resolver'
 date: '2025-01-31'
 author: 'Fernando Rosas'
-section: 'Temas Centrais'
+section: '50 anos do 25 de Abril'
 ---
 
 ![image](/images/22_PM.jpg)
