--- a/src/app/posts/5.md
+++ b/src/app/posts/5.md
@@ -4,7 +4,7 @@ Portugal'
 subtitle: ''
 date: '2025-01-31'
 author: 'Isabel Roque'
-section: 'Temas Centrais'
+section: '50 anos do 25 de Abril'
 ---
 
 
